<resources>
    <string name="app_name">DontJustEat</string>
    <string name="notification_no_notification_text">Currently you have no notifications!</string>
    <!-- Notification card strings -->
    <string name="notification_mark_as_read">Mark as read</string>
    <string name="notification_title_sample">New Booking</string>
    <string name="notification_message_sample">You have a new booking!</string>
    <string name="notification_date_sample">08/05/2025</string>
    <string name="notification_time_sample">19:30</string>
    <string name="notification_dot"> • </string>
    <string name="notification_ref_format">Ref: %1$s</string>


    <!--Edit booking strings -->
    <string name="select_date">Select date</string>
    <string name="select_dining_time">Select dining time</string>
    <string name="select_number_of_guests">Select number of guests</string>
    <string name="admin_menu_item_image">Menu item image</string>
<<<<<<< HEAD
    <string name="create_an_account_string"><u>Create an account.</u></string>

    <!-- Firebase web client id -->
    <string name="default_web_client_id">598094373100-k6ipq31pecph25agohgvhhmumaoonuls.apps.googleusercontent.com</string>
=======
>>>>>>> origin/main
</resources>
